Ajout de lien vers mon cv au format pdf, attribution de couleur au survol des liens ainsi qu'aux dates.

--- a/css/CV_bootstrap.css
+++ b/css/CV_bootstrap.css
@@ -9,3 +9,17 @@ li{
     list-style: none;
 }
 
+a:hover{
+    color: #0046d9 !important;
+    text-decoration: none;
+}
+
+span{
+
+    color: #0046d9;
+}
+
+#parcours{
+
+    margin-bottom: 10px;
+}
